# flicker

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  ad5220.pio  agc.c  agc.h  dsp.c  dsp.h  fft-test-bigsawtooth.h  fft-test-bigsquare.h  fft-test-cosine.h  fft-test-generator.py  fft-test-noise.h  fft-test-sawtooth.h  fft-test-square.h  fft-test.c  fft.c  fft.py  graph.c  graph.h  main.c  pins.h  sample.c
FlickerUI/: settings.gradle
FlickerUI/app/: build.gradle
FlickerUI/app/src/androidTest/java/org/phlegethon/flickerui/: ExampleInstrumentedTest.kt
FlickerUI/app/src/main/: AndroidManifest.xml
FlickerUI/app/src/main/java/org/phlegethon/flickerui/: MainActivity.kt
FlickerUI/app/src/main/java/org/phlegethon/flickerui/ui/main/: MainFragment.kt  MainViewModel.kt
FlickerUI/app/src/main/res/values/: strings.xml  themes.xml
FlickerUI/app/src/main/res/values-night/: themes.xml
FlickerUI/app/src/main/res/xml/: device_filter.xml
FlickerUI/app/src/test/java/org/phlegethon/flickerui/: ExampleUnitTest.kt
FlickerUI/gradle/wrapper/: gradle-wrapper.properties
case/: case.3mf  case.step
firmware/: CMakeLists.txt  ad5220.pio  agc.c  agc.h  assertions.h  fft.c  fft.h  flicker-v1.0.uf2  graph.c  graph.h  main.c  sample.c  sample.h
firmware/tests/: fft-test-sawtooth.h  tests.c
hardware/: case.scad  case.stl
pcb/: flicker.kicad_pcb  flicker.kicad_prl  flicker.kicad_pro  flicker.kicad_sch
tests/: fft-test-bigsawtooth.h  fft-test-bigsquare.h  fft-test-cosine.h  fft-test-generator.py  tests.c
